--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 <!-- Calendario Theme CSS -->
 <link rel="stylesheet" href="css/styles.css" type="text/css">  
 
-<script src='js/jquery-1.11.2.min.js'></script>
-
 <!-- ISA Theme JS -->
-<script src='js/bootstrap.min.js'></script>
+<script src='lib/bootstrap.min.js'></script>
 
 <h1>Alto rio Negro – noroeste amazônico</h1>
 
